<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_36sdp"
        android:src="@drawable/newappicon"
        android:layout_height="@dimen/_116sdp">

    </ImageView>


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/exit"
        android:layout_gravity="center"
        android:textSize="@dimen/_12sdp"
        android:layout_height="wrap_content">

    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_34sdp"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_weight=".1"
            android:src="@drawable/ic_search"
            android:layout_height="@dimen/_24sdp">

        </ImageView>

        <EditText
            android:layout_width="0dp"
            android:maxLines="1"
            android:minLines="1"
            android:inputType="number"
            android:layout_weight="4"
            android:singleLine="true"
            android:id="@+id/ed_bookingid"
            android:background="@android:color/transparent"
            android:hint="@string/search"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_height="wrap_content">

        </EditText>

        <ImageView
            android:layout_width="@dimen/_44sdp"
            android:layout_weight=".9"
            android:id="@+id/iv_exitBarcode"
            android:src="@drawable/ic_qr_code"
            android:layout_height="@dimen/_24sdp">

        </ImageView>



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_height="1dp">


    </View>


    <Button
        android:id="@+id/btn_exist"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/corner_curve_green_button"
        android:text="@string/gateexist"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp">

    </Button>

    <Button
        android:layout_width="match_parent"
        android:text="@string/viewstatus"
        android:id="@+id/btn_viewstatus"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/corner_curve_green_button"
        android:layout_height="@dimen/_44sdp">

    </Button>




</LinearLayout>