<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_36sdp"
        android:src="@drawable/newappicon"
        android:layout_height="@dimen/_116sdp">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:text="@string/entry"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:layout_height="wrap_content">


    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="5"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        android:background="@drawable/corner_curve_normal_selector"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_42sdp"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_weight=".5"
            android:layout_marginStart="@dimen/_12sdp"
            android:src="@drawable/ic_search"
            android:layout_height="@dimen/_20sdp">

        </ImageView>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="4"
            android:id="@+id/ed_bookingid"
            android:background="@android:color/transparent"
            android:hint="@string/search"
            android:inputType="number"
            android:singleLine="true"
            android:layout_height="wrap_content">

        </EditText>

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_weight=".5"
            android:id="@+id/iv_barcodescanner"
            android:src="@drawable/ic_qr_code"
            android:layout_height="@dimen/_24sdp">

        </ImageView>



    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:id="@+id/btn_scan"
        android:text="@string/gateentry"
        android:textSize="@dimen/_15sdp"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/corner_curve_green_button"
        android:layout_height="@dimen/_40sdp">

    </Button>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_42sdp"
            android:background="@drawable/bg_background"
            android:layout_height="wrap_content">


        </RelativeLayout>

        <Button
            android:id="@+id/btn_viewstatus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/corner_curve_green_button"
            android:text="@string/viewstatus"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp">

        </Button>

    </RelativeLayout>



</LinearLayout>