<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_login">

        </ImageView>


    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/enteremail"
            android:inputType="textEmailAddress"
            android:singleLine="true"

            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:background="@color/grey">

    </View>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/enterpassword"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:background="@color/grey">

    </View>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_32sdp">

        <Button
            android:id="@+id/bnt_logincontinue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/corner_curve_green_button"
            android:text="@string/conitnue"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp">

        </Button>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bnt_logincontinue"
            android:background="@drawable/bg_background">

        </androidx.appcompat.widget.AppCompatImageView>


    </RelativeLayout>


</LinearLayout>